--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,8 @@ body {
    margin: 0;
    padding: 0;
    font-size: 16px;
+   font-family: "Inter", "Arial", sans-serif;
+   background-color: #E7E7E7;
 }
 
 :root {
@@ -78,4 +80,186 @@ ul, ol {
 
 h1, h2, h3, h4, h5, h6, p {
    margin: 0;
+}
+
+.main {
+   padding-top: 80px;
+   padding-bottom: 80px;
+}
+
+.main-wrapper {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.main-start {
+   width: 570px;
+   background-image: url("./../images/bg-img.jpg");
+   background-repeat: no-repeat;
+   padding-top: 60px;
+   padding-right: 60px;
+   padding-left: 60px;
+   border-radius: 20px;
+}
+
+.main-text {
+   font-weight: 500;
+   font-size: 14px;
+   line-height: 17px;
+   border: 1px solid var(--white);
+   border-radius: 20px;
+   width: 178px;
+   padding: 4px 14px;
+   color: var(--white);
+}
+
+.main-text-wrapper {
+   width: 389px;
+   padding-top: 60px;
+}
+
+.main-heading {
+   font-size: 36px;
+   line-height: 46px;
+   color: var(--white);
+   margin-bottom: 25px;
+}
+
+.main-subtitle {
+   width: 347px;
+   line-height: 26px;
+   color: var(--white);
+   margin-bottom: 203px;
+}
+
+.main-link {
+   font-size: 19px;
+   line-height: 23px;
+   color: var(--white);
+   background-color: var(--green);
+   text-decoration: none;
+   padding: 19px;
+   display: block;
+   margin-right: -60px;
+   margin-left: -60px;
+   border-bottom-left-radius: 18px;
+   border-bottom-right-radius: 18px;
+   text-align: center;
+}
+
+.main-link-bold-text {
+   font-weight: 700;
+}
+
+.main-end {
+   width: 570px;
+}
+
+.form {
+   background-color: var(--white);
+   border-radius: 20px;
+   padding: 40px 60px;
+   display: flex;
+   flex-direction: column;
+}
+
+.form-heading {
+   font-weight: 600;
+   font-size: 32px;
+   line-height: 42px;
+   margin-bottom: 60px;
+}
+
+.form-label {
+   width: 100%;
+   
+}
+
+/* .form-input:not(:last-child) {
+   margin-bottom: 35px;
+} */
+
+.form-input:last-child {
+   display: block;
+   margin-bottom: 63px;
+}
+
+.form-input {
+   width: 100%;
+   border: none;
+   outline: none;
+   border-bottom: 1px solid var(--gray);
+   padding-bottom: 14px;
+   font-weight: 600;
+   font-size: 18px;
+   line-height: 22px;
+   margin-bottom: 4px;
+}
+
+.form-input::placeholder {
+   font-weight: 400;
+   line-height: 19px;
+   color: var(--gray);
+}
+
+.form-input:focus {
+   border-bottom-color: #000000;
+}
+
+.form-input:not(:placeholder-shown):not(:focus):invalid {
+   border-bottom-color: var(--red);
+}
+
+.form-input:not(:placeholder-shown):not(:focus):invalid .form-input::placeholder  {
+  color: var(--red);
+}
+
+.form-input:not(:placeholder-shown):not(:focus) + .invalid-text {
+   display: block;
+}
+
+.invalid-text {
+   color: var(--red);
+   font-size: 11px;
+   line-height: 13px;
+   display: none;
+   text-align: end;
+}
+
+.form-btn {
+   font-weight: 600;
+   line-height: 19px;
+   color: var(--white);
+   border: none;
+   background: none;
+   background-color: var(--siyoh);
+   border-radius: 10px;
+   padding: 20px 0;
+   text-align: center;
+   margin-bottom: 8px;
+}
+
+.form-btn:hover {
+   cursor: pointer;
+}
+
+.form-btn:active {
+   background-color: #3A2BF8;
+}
+
+.click-wrapper {
+   text-align: center;
+}
+
+.click-text {
+   font-size: 11px;
+   line-height: 15px;
+   color: var(--gray);
+}
+
+.click-link {
+   font-weight: 600;
+   font-size: 14px;
+   color: var(--red);
 }
